# critter-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  SEMVER.md  code_of_conduct.md  composer.json  deny.toml  docker-compose.yml  flake.nix  migrations-db.php  migrations.php  start.php
.devcontainer/: devcontainer.json
app/: main.php
app/API/: api.php
app/Auth/: authorizing.php
app/Commands/: StartCommand.php
app/Database/: database.php
app/Database/Migrations/: Version20241013130804_users.php
app/Language/: language.php
app/Logging/: logging.php
documents/: overview.md  placeholder.md
migrations/: 20250823001920_init.sql
src/: api.rs  bot.rs  db.rs  events.rs  main.rs
