[package]
name = "critter-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["env"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["tls-rustls", "runtime-tokio", "postgres"] }
teloxide = { version = "0.17.0", features = ["ctrlc_handler", "rustls"], default-features = false }
tokio = { version = "1.47.1", features = ["rt", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
